# hetzner-ddns

./: .env.test  pyproject.toml  run.sh
app/: config.py  main.py
